appeal detail info done

--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -153,5 +153,347 @@
   "hazardous_facility_type": "XICHO turi",
   "hazardous_facility_type_description": "XICHO turi tavsifi",
   "hazardous_facilities_type": "XICHO turlari",
-  "description": "Tavsif"
+  "description": "Tavsif",
+  "labels": {
+    "HF": {
+      "identificationCardPath": "Identifikatsiya varag‘i fayli",
+      "receiptPath": "XICHOni ro‘yxatga olish uchun to‘lov kvitansiyasi fayli",
+      "expertOpinionPath": "Ekspertiza xulosasi fayli",
+      "projectDocumentationPath": "Loyiha hujjatlari fayli",
+      "cadastralPassportPath": "XICHO kadastr pasporti fayli",
+      "industrialSafetyDeclarationPath": "Sanoat xavfsizligi deklaratsiyasi fayli",
+      "insurancePolicyPath": "Sug‘urta polisi fayli",
+      "licensePath": "Litsenziya fayli",
+      "permitPath": "Ruxsatnoma fayli",
+      "certificationPath": "XICHO xodimlarining sanoat xavfsizligi bo‘yicha attestatsiyadan o‘tganligi fayli",
+      "deviceTestingPath": "Qurilmalarni sinovdan o‘tganligi fayli",
+      "appointmentOrderPath": "Maʼsul xodim tayinlanganligi buyrug‘i fayli",
+      "ecologicalConclusionPath": "Ekologiya qo‘mitasidan xulosasi fayli",
+      "replyLetterPath": "Yong‘in xavfsizligi xulosasi fayli",
+      "upperOrganization": "Yuqori turuvchi tashkilotning nomi",
+      "name": "XICHOning nomi",
+      "address": "XICHOning manzili",
+      "location": "Geolokatsiya (X,Y)",
+      "hfTypeId": "XICHOning turi",
+      "extraArea": "XICHO sexlari, uchastkalari, maydonchalari va boshqa ishlab chiqarish obʼektlarining nomi",
+      "hazardousSubstance": "VMning 2008 yil 10 dekabrdagi 271-son qaroriga muvofiq xavfli moddalarning nomi va miqdori",
+      "spheres": "Tarmoqlar",
+      "phoneNumber": "Telefon raqami",
+      "email": "Elektron pochta manzili"
+    },
+    "ELEVATOR": {
+      "labelPath": "Liftning birkasi bilan surʼati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qoʻshimcha fayllar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Lift turi",
+      "factoryNumber": "Liftning zavod raqami",
+      "factory": "Liftni ishlab chiqargan zavod nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Lift joylashgan manzil",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Qisman texnik koʼrik sanasi",
+      "fullCheckDate": "Toʼliq texnik koʼrik sanasi",
+      "sphere": "Soha",
+      "liftingCapacity": "Yuk koʻtara olish quvvati (kg)",
+      "stopCount": "Toʼxtashlar soni"
+    },
+    "CRANE": {
+      "labelPath": "Kranning birkasi bilan surati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Kran turi",
+      "factoryNumber": "Kranning zavod raqami",
+      "model": "Model, marka",
+      "factory": "Ishlab chiqargan zavod nomi",
+      "location": "Geolokatsiya (X,Y)",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
+      "boomLength": "Strelasining uzunligi (m)",
+      "liftingCapacity": "Yuk koʻtara olish quvvati (tonna)",
+      "regionId": "Kran joylashgan viloyat",
+      "districtId": "Kran joylashgan tuman",
+      "address": "Kran joylashgan manzil",
+      "phoneNumber": "Telefon raqami"
+    },
+    "CONTAINER": {
+      "labelPath": "Idishning birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Idish turi",
+      "factoryNumber": "Idishning zavod raqami",
+      "factory": "Idishni ishlab chiqargan zavod nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Idish joylashgan manzil",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
+      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "capacity": "Hajmi",
+      "environment": "Muhit",
+      "pressure": "Ruxsat etilgan bosim"
+    },
+    "BOILER": {
+      "labelPath": "Qozonning birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Qozon turi",
+      "factoryNumber": "Qozonning zavod raqami",
+      "factory": "Qozonni ishlab chiqargan zavod nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Qozon joylashgan manzil",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
+      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "capacity": "Hajmi",
+      "environment": "Muhit",
+      "pressure": "Ruxsat etilgan bosim"
+    },
+    "ESCALATOR": {
+      "labelPath": "Eskalatorning birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Eskalator turi",
+      "factoryNumber": "Eskalatorning zavod raqami",
+      "factory": "Eskalatorni ishlab chiqargan zavod nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Eskalator joylashgan manzil",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
+      "passengersPerMinute": "O‘tkazish qobiliyati, kishi/soat",
+      "length": "Uzunligi",
+      "speed": "Tezligi",
+      "height": "Ko‘tarish balandligi"
+    },
+    "PIPELINE": {
+      "labelPath": "Quvurning birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Quvur turi",
+      "factoryNumber": "Quvurning zavod raqami",
+      "factory": "Quvurni ishlab chiqargan zavod nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Quvurning joylashgan manzili",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
+      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "diameter": "Diametr, mm",
+      "thickness": "Devor qalinligi, mm",
+      "length": "Uzunligi, m",
+      "pressure": "Bosim, mPa",
+      "environment": "Muhiti"
+    },
+    "CHEMICAL_CONTAINER": {
+      "labelPath": "Idishning birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Idish (kimyo) turi",
+      "factoryNumber": "Idishning zavod raqami",
+      "factory": "Idishning egasining nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Idish joylashgan manzil",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
+      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "capacity": "Hajmi",
+      "environment": "Muhit",
+      "pressure": "Ruxsat etilgan bosim"
+    },
+    "HEAT_PIPELINE": {
+      "labelPath": "Quvurning birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Bug‘ va issiq suv quvuri turi",
+      "factoryNumber": "Quvurning zavod raqami",
+      "factory": "Quvur egasining nomi",
+      "model": "Model, marka",
+      "districtId": "Quvur joylashgan tuman",
+      "address": "Quvurning joylashgan manzili",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
+      "diameter": "Diametr, mm",
+      "thickness": "Devor qalinligi, mm",
+      "length": "Uzunligi, m",
+      "pressure": "Bosim, mPa",
+      "temperature": "Harorat, °C"
+    },
+    "BOILER_UTILIZER": {
+      "labelPath": "Qozon utilizatorining birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Qozon utilizator turi",
+      "factoryNumber": "Qozon utilizatorining zavod raqami",
+      "factory": "Qozon utilizatori egasining nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Qozon utilizatorining joylashgan manzili",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
+      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "capacity": "Hajmi",
+      "environment": "Muhit",
+      "pressure": "Ruxsat etilgan bosim",
+      "density": "Zichligi, kg/m³",
+      "temperature": "Harorat, °C"
+    },
+    "LPG_CONTAINER": {
+      "labelPath": "Idishning (SUG) birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Idish (SUG) turi",
+      "factoryNumber": "Idishning (SUG) zavod raqami",
+      "factory": "Idishning (SUG) egasining nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Idishning (SUG) joylashgan manzili",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
+      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "capacity": "Hajmi",
+      "environment": "Muhit",
+      "pressure": "Ruxsat etilgan bosim"
+    },
+    "LPG_POWERED": {
+      "gasSupplyProjectPath": "Gaz ta‘minoti loyihasi fayli",
+      "labelPath": "Qurilmaning birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Qurilma turi",
+      "factoryNumber": "Qurilmaning zavod raqami",
+      "factory": "Qurilma egasining nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Qurilmaning joylashgan manzili",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
+      "capacity": "Sarflash miqdori, m³/soat",
+      "pressure": "Bosim, mPa",
+      "fuel": "Yoqilg‘i turi"
+    },
+    "HOIST": {
+      "labelPath": "Yuk ko‘targichning birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Yuk ko‘targich turi",
+      "factoryNumber": "Yuk ko‘targichning zavod raqami",
+      "factory": "Yuk ko‘targich egasining nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Yuk ko‘targichning joylashgan manzili",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
+      "height": "Ko‘tarish balandligi",
+      "liftingCapacity": "Yuk ko‘tarish qobiliyati"
+    },
+    "CABLEWAY": {
+      "labelPath": "Osma yo‘lning birkasi bilan sur‘ati",
+      "saleContractPath": "Sotib olish-sotish shartnomasi fayli",
+      "equipmentCertPath": "Qurilma sertifikati fayli",
+      "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
+      "expertisePath": "Ekspertiza loyihasi fayli",
+      "installationCertPath": "Montaj guvohnomasi fayli",
+      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "phoneNumber": "Telefon raqami",
+      "hazardousFacilityId": "XICHOʻ",
+      "childEquipmentId": "Osma yo‘l turi",
+      "factoryNumber": "Osma yo‘lning zavod raqami",
+      "factory": "Osma yo‘l egasining nomi",
+      "model": "Model, marka",
+      "manufacturedAt": "Ishlab chiqarilgan sana",
+      "address": "Osma yo‘lning joylashgan manzili",
+      "location": "Geolokatsiya (X,Y)",
+      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
+      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "speed": "Harakat tezligi",
+      "passengerCount": "Yo‘lovchilar soni",
+      "length": "Uzunligi"
+    }
+  }
 }
