--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -498,11 +498,11 @@
     "IRS": {
       "phoneNumber": "Ariza beruvchining telefon raqami",
       "parentOrganization": "Yuqori turuvchi tashkilot ",
-      "supervisorName": "Rahbarning F.I.Sh.",
-      "supervisorPosition": "Rahbarning lavozimi",
-      "supervisorStatus": "Rahbarning radiatsiya xavfsizligi bo‘yicha tayyorgarlik holati",
-      "supervisorEducation": "Rahbarning ma‘lumoti",
-      "supervisorPhoneNumber": "Rahbarning telefon raqami",
+      "supervisorName": "Masʼul shaxsning F.I.Sh.",
+      "supervisorPosition": "Masʼul shaxsning lavozimi",
+      "supervisorStatus": "Masʼul shaxsning radiatsiya xavfsizligi bo‘yicha tayyorgarlik holati",
+      "supervisorEducation": "Masʼul shaxsning ma‘lumoti",
+      "supervisorPhoneNumber": "Masʼul shaxsning telefon raqami",
       "division": "Bo‘linma nomi (INM bilan ishlovchi)",
       "identifierType": "INMning identifikatsiya raqami (SRM/NUM)",
       "symbol": "Radionuklid belgisi",
