feat: mark inspector

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -51,7 +51,7 @@
     "ASSIGNED": "Инспектор белгиланганлар"
   },
   "risk_analysis_columns": {
-    "registryNumber": "Реестр рақами",
+    "registryNumber": "Ҳисобга олиш рақами",
     "name": "Номи",
     "legalName": "Юридик шахс номи",
     "legalTin": "СТИР",
