feat: attraction passport

--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -103,6 +103,7 @@
     "CABLEWAY": "Осма йўл",
     "HOIST": "Кўтарма қурилма",
     "PIPELINE": "Қувур",
+    "ATTRACTION": "Аттракцион",
     "CHEMICAL_CONTAINER": "Кимёвий идиш",
     "HEAT_PIPELINE": "Иссиқлик қувури",
     "BOILER_UTILIZER": "Қозон утилизатори",
