--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -109,6 +109,7 @@
     "CABLEWAY": "Osma yoʻl",
     "HOIST": "Koʻtarma qurilma",
     "PIPELINE": "Quvur",
+    "ATTRACTION": "Attraksion",
     "CHEMICAL_CONTAINER": "Kimyoviy idish",
     "HEAT_PIPELINE": "Issiqlik quvuri",
     "BOILER_UTILIZER": "Qozon utilizatori",
