--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -123,7 +123,8 @@
     "IN_AGREEMENT": "Kelishishda",
     "IN_APPROVAL": "Tasdiqlashda",
     "COMPLETED": "Yakunlangan",
-    "REJECTED": "Qaytarilgan"
+    "REJECTED": "Rad etilgan",
+    "CANCELLED": "Qaytarilgan"
   },
   "building_sphere_type": {
     "RESIDENTIAL": "Turar joy binosi",
