--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -118,7 +118,7 @@
     "IN_APPROVAL": "Тасдиқлашда",
     "COMPLETED": "Якунланган",
     "REJECTED": "Рад этилган",
-    "CANCELLED": "Қайтарилган"
+    "CANCELED": "Қайтарилган"
   },
   "regions": "Вилоятлар",
   "districts": "Туманлар",
