--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -546,5 +546,6 @@
       "passportPath": "INM (qurilma) pasporti va sertifikati fayli",
       "additionalFilePath": "Qo‘shimcha maʼlumotlar"
     }
-  }
+  },
+  "accreditation": "Akkreditatsiya"
 }
