--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -86,10 +86,13 @@
   },
   "permission": {
     "APPEAL": "Arizalar",
+    "HF": "XICHO",
+    "EQUIPMENT": "QURILMALAR",
+    "IRS": "INM",
     "REGISTRY": "Reyestrlar",
-    "ATTESTAT": "Attestat",
     "ATTESTATION": "Attestatsiya",
-    "CERTIFICATE": "Sertifikat",
+    "CADASTRE": "Kadastr",
+    "PERMITS": "Ruxsat beruvchi hujjatlar",
     "ACCREDITATION": "Akkreditatsiya"
   },
   "application": {
