--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -103,6 +103,11 @@
     "COAL": "Koʻmir",
     "GEOLOGY": "Geologiya"
   },
+  "attestation": {
+    "EMPLOYEE": "Xodim",
+    "LEADER": "Rahbar xodim",
+    "TECHNICIAN": "Texnik"
+  },
   "templates": {
     "IRS": "INM arizasi",
     "XICHO_APPEAL": "XICHO arizasi",
